[Nav] 맞춤법 검사 사이트 링크 변경 - 사이트가 불안정하고 매우 느림

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -418,7 +418,7 @@ sidebar-git:
         children:
           - title: "맞춤법 검사기"
             icon: "fas fa-link"
-            url: https://speller.cs.pusan.ac.kr/
+            url: https://alldic.daum.net/grammar_checker.do
           - title: "표 만들기"
             icon: "fas fa-link"
             url: https://www.tablesgenerator.com/markdown_tables
