[Nav] 유튜브 3달 운영 회고 추가

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -810,3 +810,5 @@ sidebar-it:
         url: /it/youtube/1-month/
       - title: "[YouTube] 채널 2달 운영 회고"
         url: /it/youtube/2-month/
+      - title: "[YouTube] 채널 3달 운영 회고"
+        url: /it/youtube/3-month/
