--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -160,6 +160,8 @@ sidebar-algorithm:
         url: /algorithm/techniques/NoStoredPropertySwap/
       - title: "0으로 나누기는 왜 안될까?"
         url: /algorithm/techniques/division-by-zero/
+      - title: "[Swift] 순열"
+        url: /algorithm/techniques/swift-permuation/
   - title: "Sort"
     url: /algorithm/sort/
     children:
@@ -176,11 +178,15 @@ sidebar-algorithm:
         url: /algorithm/leet-code-easy/longest-common-prefix/
       - title: "20. Valid Parentheses"
         url: /algorithm/leet-code-easy/valid-parentheses/
+      - title: "28. Implement strStr()"
+        url: /algorithm/leet-code-easy/Implement-strstr/
   - title: "Leet Code - Medium"
     url: /algorithm/leet-code-medium/
     children:
       - title: "31. Next Permutation"
         url: /algorithm/leet-code-medium/next-permutation/
+      - title: "56. Merge Intervals"
+        url: /algorithm/leet-code-medium/Merge-Intervals/
       - title: "146. LRU Cache"
         url: /algorithm/leet-code-medium/lrucache/
   - title: "Leet Code - Hard"
@@ -244,6 +250,8 @@ sidebar-clean:
       - title: "Naming Conventions For iOS Development"
         icon: "fas fa-link"
         url: /clean/code/naming-converntions-for-ios-development/
+      - title: "코드 리뷰 피라미드"
+        url: /clean/code/codereview-pyramid/
   - title: "English"
     url: /clean/english/
     children:
