--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -185,6 +185,8 @@ sidebar-algorithm:
     children:
       - title: "6. Zigzag Conversion"
         url: /algorithm/leet-code-medium/zigzag-conversion/
+      - title: "8. String to Integer (atoi)"
+        url: /algorithm/leet-code-medium/string-to-integer-atoi/
       - title: "31. Next Permutation"
         url: /algorithm/leet-code-medium/next-permutation/
       - title: "56. Merge Intervals"
