[Nav] youtube 4 month

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -841,3 +841,5 @@ sidebar-it:
         url: /it/youtube/2-month/
       - title: "[YouTube] 채널 3달 운영 회고"
         url: /it/youtube/3-month/
+      - title: "[YouTube] 채널 4달 운영 회고"
+        url: /it/youtube/4-month/
