[Nav] 시니어 개발자

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -323,6 +323,8 @@ sidebar-clean:
       - title: "좋은 개발자(3)"
         icon: "fab fa-youtube"
         url: /clean/think/good-developer3/
+      - title: "시니어 개발자"
+        url: /clean/think/senior-developer/
       - title: "개발을 시작하게 된 계기"
         url: /clean/think/start-development/
       - title: "iOS 개발을 시작하게 된 계기"
