--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -221,6 +221,8 @@ sidebar-algorithm:
         url: /algorithm/leet-code-easy/valid-parentheses/
       - title: "28. Implement strStr()"
         url: /algorithm/leet-code-easy/Implement-strstr/
+      - title: "121. Best Time to Buy and Sell Stock"
+        url: /algorithm/leet-code-easy/best-time-to-buy-and-sell-stock/
   - title: "Leet Code - Medium"
     url: /algorithm/leet-code-medium/
     children:
