--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -358,7 +358,7 @@ sidebar-clean:
         url: /clean/think/senior-developer/
       - title: "개발을 시작하게 된 계기"
         url: /clean/think/start-development/
-      - title: "아무 회사나 취업하면 안 되는 이유"
+      - title: "좋좋소 개발 인생 시작"
         url: /clean/think/should-not-work-for-any-company/
       - title: "iOS 개발을 시작하게 된 계기"
         url: /clean/think/start-development-ios/
