[Nav] link quicktype

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -543,6 +543,11 @@ sidebar-ios:
       - title: "App Store 심사 지침"
         icon: "fas fa-link"
         url: https://developer.apple.com/kr/app-store/review/guidelines/
+  - title: "Json"
+    children:
+      - title: "Quicktype"
+        icon: "fas fa-link"
+        url: https://app.quicktype.io/
   - title: "Objective-C"
     url: /ios/objectivec/
     children:
