--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -470,6 +470,8 @@ sidebar-git:
     children:
       - title: "GitHub Actions"
         url: /git/github/github-action/
+      - title: "GitHub ssh 접속 설정"
+        url: /git/github/github-ssh/
       - title: "2020 통계로 보는 현 시국"
         url: /git/github/github-trand-2020/
   - title: "Blog"
