--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -245,6 +245,8 @@ sidebar-algorithm:
         url: /algorithm/leet-code-medium/3sum/
       - title: "16. 3Sum Closest"
         url: /algorithm/leet-code-medium/3sum-closest/
+      - title: "18. 4Sum"
+        url: /algorithm/leet-code-medium/4sum/
       - title: "31. Next Permutation"
         url: /algorithm/leet-code-medium/next-permutation/
       - title: "56. Merge Intervals"
