--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -128,6 +128,8 @@ sidebar-architecture:
     children:
       - title: "Composable Architecture"
         url: /architecture/composable-architecture/composable-architecture/
+      - title: "RIBs"
+        url: /architecture/composable-architecture/ribs/
   - title: "TDD"
     url: /architecture/tdd/
     children:
