--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -732,6 +732,8 @@ sidebar-ios:
     children:
     - title: "fastlane으로 관리"
       url: /ios/fastlane/fastlane/
+    - title: "outlined copy of"
+      url: /ios/runtime-error/outlined-retain-of/
         
     
 #    children:
