[Nav] Stack Memory vs Heap Memory Speed

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -65,6 +65,8 @@ sidebar-cs:
         url: /cs/memory/mutability/
       - title: "32Bit vs 64Bit"
         url: /cs/memory/32bit-vs-64bit/
+      - title: "Stack vs Heap Speed"
+        url: /cs/memory/stack-vs-heap/
   - title: "Data Structure"
     url: /cs/datastructure/
     children:
