--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -238,6 +238,8 @@ sidebar-algorithm:
         url: /algorithm/leet-code-easy/best-time-to-buy-and-sell-stock/
       - title: "125. Valid Palindrome"
         url: /algorithm/leet-code-easy/valid-palindrome/
+      - title: "206. Reverse Linked List"
+        url: /algorithm/leet-code-easy/reverse-linked-list/
       - title: "268. Missing Number"
         url: /algorithm/leet-code-easy/missing-number/
   - title: "Leet Code - Medium"
