--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -102,6 +102,15 @@ sidebar-cs:
         url: /cs/network/osi-7-layer/
       - title: "IaaS, PaaS, SaaS"
         url: /cs/network/iaas-paas-saas/
+  - title: "Server"
+    url: /cs/server/
+    children:
+      - title: "Node.js"
+        url: /cs/server/nodejs/
+        icon: "far fa-folder-open"
+        children:
+        - title: "NPM"
+          url: /cs/server/nodejs/npm_install/
   - title: "Security"
     url: /cs/security/
     children:
